# extract_frames

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/extract_frames/: __init__.py  extract_frames.py
